// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaskedCopyableTextField snapshots it matches snapshot when allowMask = false 1`] = `
<div
  className="maskedCopyableTextField"
>
  <div
    className="labelSection"
  >
    <LabelWithTooltip
      htmlFor="maskedCopyableTextField0"
    >
      label1
    </LabelWithTooltip>
  </div>
  <div
    className="controlSection"
  >
    <div
      className="borderedSection readOnly"
    >
      <input
        aria-label="ariaLabel1"
        className="input"
        id="maskedCopyableTextField0"
        readOnly={true}
        type="text"
        value="value1"
      />
      <input
        aria-hidden={true}
        className="input"
        readOnly={true}
        style={
          Object {
            "height": "1px",
            "opacity": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
        tabIndex={-1}
        value="value1"
      />
    </div>
    <div
      className="copySection"
    >
      <CopyButton
        copyText="value1"
      />
    </div>
  </div>
</div>
`;

exports[`MaskedCopyableTextField snapshots it matches snapshot when allowMask = true 1`] = `
<div
  className="maskedCopyableTextField"
>
  <div
    className="labelSection"
  >
    <LabelWithTooltip
      htmlFor="maskedCopyableTextField2"
    >
      label1
    </LabelWithTooltip>
  </div>
  <div
    className="controlSection"
  >
    <div
      className="borderedSection readOnly"
    >
      <input
        aria-label="ariaLabel1"
        className="input"
        id="maskedCopyableTextField2"
        readOnly={true}
        type="password"
        value="value1"
      />
      <input
        aria-hidden={true}
        className="input"
        readOnly={true}
        style={
          Object {
            "height": "1px",
            "opacity": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
        tabIndex={-1}
        value="value1"
      />
      <StyledTooltipHostBase
        content="common.maskedCopyableTextField.toggleMask.label.show"
        id="toggleMaskButtonTooltipHost3"
      >
        <CustomizedIconButton
          aria-labelledby="toggleMaskButtonTooltipHost3"
          iconProps={
            Object {
              "iconName": "RedEye",
            }
          }
          onClick={[Function]}
        />
      </StyledTooltipHostBase>
    </div>
    <div
      className="copySection"
    >
      <CopyButton
        copyText="value1"
      />
    </div>
  </div>
</div>
`;
